--- a/app/src/main/res/layout/puntajes.xml
+++ b/app/src/main/res/layout/puntajes.xml
@@ -2,14 +2,15 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#fff4f4f4"
+              android:background="#fff"
               android:orientation="vertical"
+              android:padding="16dp"
               tools:context=".Activities.BkballPuntajes">
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#999"
+            android:background="#F08701"
             android:orientation="horizontal">
 
 
@@ -18,7 +19,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="1dp"
                 android:layout_weight="1"
-                android:background="#fff4f4f4"
+                android:background="#fff"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
                 android:padding="16dp">
@@ -29,8 +30,11 @@
                     android:layout_height="wrap_content"
                     android:text="Team A"
                     android:textAllCaps="true"
+                    android:drawableLeft="@drawable/shirt1"
+                    android:drawablePadding="5dp"
                     android:textColor="#000"
-                    android:textSize="20sp" />
+                    android:textSize="18sp"
+                    android:gravity="center"/>
 
             <TextView
                     android:id="@+id/team_score1"
@@ -40,44 +44,46 @@
                     android:text="0"
                     android:textAllCaps="true"
                     android:textColor="#000"
-                    android:textSize="56sp" />
+                    android:textSize="40sp" />
 
             <Button
                     android:id="@+id/team_apunto1"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:background="#fd0095ff"
-                    android:text="+1 Point"
+                    android:layout_marginTop="20dp"
+                    android:background="#fff"
+                    android:text="  +1"
+                    android:drawableLeft="@drawable/ball"
                     android:textAllCaps="true"
-                    android:textColor="#fff"
-                    android:textSize="14sp" />
+                    android:textColor="#000"
+                    android:textSize="16sp"
+            android:padding="8dp"/>
 
             <Button
                     android:id="@+id/team_apunto2"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:background="#fd0095ff"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:text="+2 Point"
+                    android:background="#fff"
+                    android:padding="8dp"
+                    android:text="  +2"
                     android:textAllCaps="true"
-                    android:textColor="#fff"
-                    android:textSize="14sp" />
+                    android:textColor="#000"
+                    android:drawableLeft="@drawable/ball"
+                    android:textSize="16sp" />
 
             <Button
                     android:id="@+id/team_apunto3"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:background="#fd0095ff"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:text="+3 Point"
+                    android:background="#fff"
+                    android:padding="8dp"
+                    android:text="  +3"
+                    android:drawableLeft="@drawable/ball"
                     android:textAllCaps="true"
-                    android:textColor="#fff"
-                    android:textSize="14sp" />
+                    android:textColor="#000"
+                    android:textSize="16sp" />
 
 
         </LinearLayout>
@@ -85,9 +91,9 @@
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="1dp"
+
                 android:layout_weight="1"
-                android:background="#fff4f4f4"
+                android:background="#fff"
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
                 android:padding="16dp">
@@ -97,9 +103,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Team B"
+                    android:drawableLeft="@drawable/shirt2"
+                    android:gravity="center"
                     android:textAllCaps="true"
                     android:textColor="#000"
-                    android:textSize="20sp"/>
+                    android:drawablePadding="5dp"
+                    android:textSize="16sp"/>
 
             <TextView
                     android:id="@+id/team_score2"
@@ -109,44 +118,46 @@
                     android:text="0"
                     android:textAllCaps="true"
                     android:textColor="#000"
-                    android:textSize="56sp" />
+                    android:textSize="40sp" />
 
             <Button
                     android:id="@+id/team_bpunto1"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:background="#fd0095ff"
-                    android:text="+1 Point"
+                    android:layout_marginTop="20dp"
+                    android:background="#fff"
+                    android:text="  +1"
+                    android:padding="8dp"
                     android:textAllCaps="true"
-                    android:textColor="#fff"
-                    android:textSize="14sp" />
+                    android:drawableLeft="@drawable/ball"
+                    android:textColor="#000"
+                    android:textSize="16sp" />
 
             <Button
                     android:id="@+id/team_bpunto2"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:background="#fd0095ff"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:text="+2 Point"
+                    android:background="#fff"
+                    android:padding="8dp"
+                    android:text="  +2"
                     android:textAllCaps="true"
-                    android:textColor="#fff"
-                    android:textSize="14sp" />
+                    android:textColor="#000"
+                    android:drawableLeft="@drawable/ball"
+                    android:textSize="16sp" />
 
             <Button
                     android:id="@+id/team_bpunto3"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
-                    android:background="#fd0095ff"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:text="+3 Point"
+                    android:background="#fff"
+                    android:padding="8dp"
+                    android:text="  +3"
+                    android:drawableLeft="@drawable/ball"
                     android:textAllCaps="true"
-                    android:textColor="#fff"
-                    android:textSize="14sp" />
+                    android:textColor="#000"
+                    android:textSize="16sp" />
 
         </LinearLayout>
     </LinearLayout>
@@ -154,20 +165,23 @@
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:layout_gravity="center"
             android:orientation="vertical">
 
         <Button
                 android:id="@+id/fin"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                android:background="#ffd3d3d3"
-                android:paddingLeft="50dp"
-                android:paddingRight="50dp"
+                android:layout_marginTop="20dp"
+                android:background="#000"
+                android:textColor="#fff"
                 android:text="Finalizar"
-                android:textSize="14sp" />
+                android:drawableTint="#fff"
+                android:padding="5dp"
+                android:gravity="center"
+                android:drawableLeft="@drawable/end"
+                android:textSize="16sp" />
 
         />
 
@@ -175,9 +189,12 @@
                 android:id="@+id/ganador"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="hola"
+                android:layout_marginTop="10dp"
+                android:drawableTop="@drawable/cup"
                 android:textAllCaps="true"
+                android:drawablePadding="15dp"
                 android:textColor="#000"
+                android:layout_gravity="center"
                 android:textSize="20sp"/>
     </LinearLayout>
 
