--- a/app/src/main/res/layout/botones_fragmento.xml
+++ b/app/src/main/res/layout/botones_fragmento.xml
@@ -10,6 +10,16 @@
         android:padding="8dp"
         tools:context=".Activities.MainActivity">
 
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:textColor="#000"
+              android:textSize="30sp"
+              android:textStyle="bold"
+              android:drawableTop="@drawable/court"
+              android:paddingBottom="40dp"
+    android:text="Basketball Points"
+    />
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -18,17 +28,30 @@
 
         <Button
                 android:id="@+id/bt_registrar"
-                android:layout_width="200dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:text="registrar equipos"
+                android:text="Registrar quipos"
+                android:background="#000"
+                android:drawableLeft="@drawable/team"
+               android:padding="10dp"
+                android:textAllCaps="false"
+                android:textSize="16sp"
+                android:textColor="#fff"
                 android:layout_margin="10dp"/>
 
         <Button
                 android:id="@+id/bt_consultar"
-                android:layout_width="200dp"
+                android:layout_width="250dp"
                 android:layout_height="wrap_content"
                 android:text="Consultar partidos"
+                android:background="#000"
+                android:textColor="#fff"
+                android:textAllCaps="false"
+                android:textSize="16sp"
+                android:drawableLeft="@drawable/list"
+                android:padding="10dp"
                 android:layout_margin="10dp"/>
+
 
     </LinearLayout>
 
