--- a/app/src/main/res/layout/registro_equipos.xml
+++ b/app/src/main/res/layout/registro_equipos.xml
@@ -6,17 +6,30 @@
               android:padding="10dp"
               android:layout_margin="15dp"
               android:gravity="center"  >
+
+    <TextView android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:textSize="24sp"
+              android:textStyle="bold"
+              android:text="Ingresar equipos"
+              android:textColor="#000"
+              android:gravity="center"
+    android:layout_marginBottom="30dp"/>
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+
 
         <EditText
                 android:id="@+id/et_Equipo1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:gravity="center"
-                android:hint="Nombre del primer equipo"/>
+                android:drawableLeft="@drawable/shirt1"
+                android:drawablePadding="15dp"
+                android:foregroundGravity="left"
+                android:hint="Nombre equipo 1"/>
 
 
         <EditText
@@ -25,17 +38,28 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/et_Equipo1"
                 android:gravity="center"
+                android:textAlignment="viewEnd"
+
+
                 android:layout_margin="10dp"
-                android:hint="Nombre del segundo equipo"/>
+                android:drawableRight="@drawable/shirt2"
+                android:drawablePadding="15dp"
+                android:hint="Nombre equipon 2"/>
 
     </RelativeLayout>
 
     <Button
             android:id="@+id/bt_iniciar"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Iniciar partida"
+            android:text="Jugar"
+            android:textColor="#fff"
+            android:padding="15dp"
+            android:background="#000"
+            android:drawableLeft="@drawable/play"
+            android:drawablePadding="5dp"
             android:layout_margin="10dp"
+            android:textSize="14sp"
             android:layout_gravity="center"/>
 
 </LinearLayout>
